refatorando código e adicionando os testes