@@ -7,7 +7,9 @@ import com.db.votacao.model.dto.response.PautaResponseDTO;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Component
@@ -28,15 +30,17 @@ public class AssembleiaMapper {
 
     public AssembleiaResponseDTO toResponseDTO(Assembleia assembleia) {
 
-        List<PautaResponseDTO> pautas = assembleia.getPautas().stream()
+        List<PautaResponseDTO> pautaResponseDTOs = Optional.ofNullable(assembleia.getPautas())
+                .orElse(Collections.emptyList())
+                .stream()
                 .map(pautaMapper::toResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
 
         return new AssembleiaResponseDTO(
                 assembleia.getId(),
                 assembleia.getNome(),
                 assembleia.getDataCriacao(),
-                pautas
+                pautaResponseDTOs
         );
     }
 }
